fix(AttentionBox): center icon alignment in default layout and adjust alignment for no title case

--- a/packages/core/src/components/next/AttentionBox/layouts/AttentionBoxDefault/AttentionBoxDefault.module.scss
+++ b/packages/core/src/components/next/AttentionBox/layouts/AttentionBoxDefault/AttentionBoxDefault.module.scss
@@ -8,7 +8,7 @@
   .icon {
     grid-column: 1;
     grid-row: 1;
-    align-self: start;
+    align-self: center;
   }
 
   .title {
@@ -65,6 +65,10 @@
   }
 
   &:not(.hasTitle) {
+    .icon {
+      align-self: start;
+    }
+
     .text {
       grid-row: 1;
       grid-column-end: -2;
